Got the Tailwind 4 vs. style.css rules sorted out.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thor's Todo App</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="min-h-screen text-slate-900 dark:bg-slate-900  dark:text-slate-100 antialiased">
+    <div id="app" class="mx-auto max-w-7xl p-6"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
